+ Sync up comment scrolling + Fix stacking on render + Reconfig window spacing

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,14 +9,15 @@ html {
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   margin: 0;
-  height: 100%;
+  // height: 100vh;
 }
 
 #root {
   margin: 0;
-  height: 100%;
+  // height: 100vh;
 }
 
 /**
